 * Issue #244: (POSIX) Process.wait() can hog CPU resources if called against
   a process which is not our children.
 * Issue #248: (Linux) psutil.network_io_counters() might return erroneous NIC
   names.
 * Issue #252: (Windows) process getcwd() erroneously raise NoSuchProcess for
   processes owned by another user.  It now raises AccessDenied instead.
 * Issue #267: (OSX) Process.get_connections() - an erroneous remote address
   was returned. (Patch by Amoser)


0.4.1 - 2011-12-14
------------------

BUGFIXES

 * Issue 228: some example scripts were not working with python 3.
 * Issue 230: (Windows / OSX) memory leak in Process.get_connections().
 * Issue 232: (Linux) psutil.phymem_usage() can report erroneous values which
   are different than "free" command.
 * Issue 236: (Windows) memory/handle leak in Process's get_memory_info(),
   suspend() and resume() methods.


0.4.0 - 2011-10-29
------------------

NEW FEATURES

 * Issue 150: network I/O counters. (OSX patch by Jeremy Whitlock)
 * Issue 154: (FreeBSD) add support for process getcwd()
 * Issue 157: (Windows) provide installer for Python 3.2 64-bit.
 * Issue 198: Process.wait(timeout=0) can now be used to make wait() return
   immediately.
 * Issue 206: disk I/O counters. (OSX patch by Jeremy Whitlock)
 * Issue 213: examples/iotop.py script.
 * Issue 217: Process.get_connections() now has a "kind" argument to filter
   for connections with different criteria.
 * Issue 221: (FreeBSD) Process.get_open_files has been rewritten in C and no
   longer relies on lsof.
 * Issue 223: examples/top.py script.
 * Issue 227: examples/nettop.py script.

BUGFIXES

 * Issue 135: (OS X) psutil cannot create Process object
 * Issue 144: (Linux) no longer support 0 special PID.
 * Issue 188: (Linux) psutil import error on Linux ARM architectures.
 * Issue 194: (POSIX) psutil.Process.get_cpu_percent() now reports a percentage
   over 100 on multicore processors.